theme.css
/* ... */
/* Selects */
select,
.setting-item-control select {
  border: none;
  box-shadow: var(--control-shadow);
  background-color: var(--background-control);
}
select:focus,
.dropdown:focus {
    box-shadow: 0 0 0 3px var(--background-modifier-border-focus);
    outline: none;
}

/* Modals */
.modal-bg,
.modal,
.prompt,
.document-search-container {
  animation: 0.5s 1 alternate fadein;
}

/* Settings modal */
.modal.mod-settings .vertical-tabs-container {}
.modal.mod-settings .vertical-tab-header {
  border-right: none;
  padding: 2.5em 0 1em 1.5em;
  margin: 0 1.5em 0 0;
  background: var(--modal-background-vertical-tab-header);
}
.modal.mod-settings .vertical-tab-header-group {
  border-right: none;
  padding: 0 0 1.5em 0;
}
.modal.mod-settings .vertical-tab-header-group-title {
  padding: 0 0.5em 0.5em 0.5em;
}
.mod-settings .vertical-tab-content {
  background: var(--background-settings);
  padding: 0 var(--size-4-12);
}
.mod-settings .vertical-tab-content > .setting-item {
  border-top: none;
  padding: 0 var(--size-4-12) var(--size-4-6);
  margin: 0 calc(-1 * var(--size-4-12))
}
.mod-settings .vertical-tab-content .setting-item.setting-item-heading,
.mod-settings .vertical-tab-content .setting-item:first-child {
  padding: var(--size-4-6) var(--size-4-12) var(--size-4-6);
  margin: 0 calc(-1 * var(--size-4-12))
}
.modal-setting-nav-bar {
  border: none;
  padding: 0.5em 0 0 0;
}

/* Font settings modal */
.setting-font-list + .setting-item {
  border: none;
}

/* Community modal */
.community-modal-details {
  border: none;
}
.community-modal-search-results-wrapper {
  background: var(--modal-background-search-results);
  border: 0;
}
.community-modal-search-results {
  padding: 1.5em;
  gap: 1.5em;
}
.community-item {
  border: none;
  box-shadow: var(--shadow-l);
}

/* Document search */
.document-search-container,
.mod-active .document-search-container {
  background: var(--background-secondary);
  border-radius: var(--radius-l);
  box-shadow: var(--shadow-s);
  margin: 0 auto;
}
.document-search-button {
  border: none;
  color: var(--color-text-interactive);
}

/* Backlink pane (embedded and sidebar */
.backlink-pane > .tree-item-self .collapse-icon {
  display: block;
  margin-left: 0;
  position: relative;
}
.backlink-pane > .tree-item-self {
  color: var(--color-text-interactive);
}
.backlink-pane .search-result:not(.is-collapsed) .search-result-file-title {
  color: var(--color-text-interactive);
}
.backlink-pane .search-result-container {
  margin-left: 1em;
}
.backlink-pane .search-result-file-matches {
  background: none;
}

/* Content area */
.view-content > .markdown-source-view.mod-cm6 > .cm-editor > .cm-scroller {
  padding: 1em 2em 3em 2em;
  padding: 0;
}
.markdown-source-view.mod-cm6.is-readable-line-width .cm-sizer,
.markdown-preview-view.is-readable-line-width .markdown-preview-sizer {
  margin-left: 0;
  margin-right: 0;
  max-width: none;
  width: 100%;
}
.markdown-source-view.mod-cm6.is-readable-line-width .cm-sizer .cm-contentContainer,
 .markdown-preview-view.is-readable-line-width .markdown-preview-sizer > div:not([class]),
markdown-preview-view.is-readable-line-width .markdown-preview-sizer > div[class=""] {
  margin: 3rem auto;
  max-width: var(--file-line-width);
  padding: 0 2rem;
  width: 100%;
}
/* Override inline styles */
.cm-content {
  /* Live Preview */
  padding-bottom: 0 !important;
}
.markdown-preview-sizer {
  /* Reading Mode */
  padding-bottom: 0 !important;
}

/* Order in content area */
.inline-title {
  order: 0;
}
.metadata-container,
.setting-properties-position-above .is-live-preview .metadata-container {
  order: 1;
}
.setting-properties-position-below .is-live-preview .metadata-container {
  order: 3;
}
.setting-properties-position-below .is-live-preview .embedded-backlinks {
  padding: 0 2rem 0.5rem 2rem;
}
.cm-contentContainer {
  order: 2;
}
.embedded-backlinks {
  order: 3;
}

.view-header-title {
  display: none;
}

/* Consistent styles for inline metadata sections */
.metadata-container,
.embedded-backlinks,
.inline-title {
  background: var(--metadata-property-background);
  border: 0;
  padding: 0.5rem 2rem;
  margin: 0;
  border-radius: 0;
  transform: none;
  width: 100%;
}

/* Inline title (i.e. filename) */
.inline-title,
.setting-properties-position-above .is-live-preview .inline-title {
  /* Adjust spacing to fit well with properties directly underneath */
  padding-left: 2.5rem;
  padding-bottom: 0;
}
[data-mode="source"] .inline-title,
.setting-properties-position-below .is-live-preview .inline-title {
  /* Standard spacing, when properties aren't directly underneath */
  padding-left: 2rem;
  padding-bottom: 0.5rem;
}

/* Properties */
.metadata-container,
.setting-properties-position-above .is-live-preview .metadata-container {
  padding-top: 0;
}
.setting-properties-position-below .is-live-preview .metadata-container {
  padding: 0.5em 2em 0 2em;
}
.metadata-properties-heading .metadata-properties-title {
  font-size: var(--font-ui-smaller);
  font-weight: var(--font-medium);
}
.view-content .metadata-properties-heading .collapse-indicator svg.svg-icon,
.view-content .metadata-properties-heading .is-collapsed .collapse-indicator svg.svg-icon {
  color: var(--color-text-interactive);
}
.metadata-properties-title {
  font-size: var(--font-ui-smaller);
  color: var(--text-faint);
  font-weight: var(--font-semibold);
  padding: 0;
  user-select: none;
}
.metadata-property {
  border: solid 2px transparent;
  box-shadow: none;
  display: flex;
  gap: 0;
}
.metadata-property:focus-within {
  background: var(--nav-item-background-hover);
  border-color: var(--nav-item-background-hover);
  box-shadow: none;
}
.metadata-property:hover {
  box-shadow: none;
}
.metadata-property .metadata-property-key {
  align-items: center;
  display: flex;
  gap: 0.5em;
}
.metadata-property .metadata-property-key:focus-within {
  background: transparent;
}
/* ... */

